--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,4 +1,4 @@
-repositoryID: fluxer
+repositoryID: 8ab89659-e4c6-497d-a17b-3f1bf33dc0e0
 owners:
   - name: Typositoire
     email: davidyann88@gmail.com
